initial setup, styles and home

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>NgStoryblokDemo</title>
+  <title>Angular 2 Storyblok Demo</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script type="text/javascript" src="//app.storyblok.com/storyblok-latest.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
